add /users/{user_id}
