# api/controller/openapi/types.gen.go
@@ -1,20 +1,27 @@
 // Package openapi provides primitives to interact with the openapi HTTP API.
 //
-// Code generated by github.com/deepmap/oapi-codegen version v1.11.0 DO NOT EDIT.
+// Code generated by github.com/deepmap/oapi-codegen version v1.9.0 DO NOT EDIT.
 package openapi
 
 // CreateUserParam defines model for CreateUserParam.
-type CreateUserParam = UserProp
+type CreateUserParam UserProps
+
+// Id defines model for Id.
+type Id uint64
+
+// UpdateUserParam defines model for UpdateUserParam.
+type UpdateUserParam UserProps
 
 // User defines model for User.
 type User struct {
-	Email string `json:"email"`
-	Id    uint64 `json:"id"`
-	Name  string `json:"name"`
+	// Embedded fields due to inline allOf schema
+	Id Id `json:"id"`
+	// Embedded struct due to allOf(#/components/schemas/UserProps)
+	UserProps `yaml:",inline"`
 }
 
-// UserProp defines model for UserProp.
-type UserProp struct {
+// UserProps defines model for UserProps.
+type UserProps struct {
 	Email string `json:"email"`
 	Name  string `json:"name"`
 }
@@ -24,8 +31,18 @@ type Users struct {
 	Users []User `json:"users"`
 }
 
+// UserId defines model for UserId.
+type UserId Id
+
 // CreateUserJSONBody defines parameters for CreateUser.
-type CreateUserJSONBody = CreateUserParam
+type CreateUserJSONBody CreateUserParam
+
+// UpdateUserJSONBody defines parameters for UpdateUser.
+type UpdateUserJSONBody UpdateUserParam
 
 // CreateUserJSONRequestBody defines body for CreateUser for application/json ContentType.
-type CreateUserJSONRequestBody = CreateUserJSONBody
+type CreateUserJSONRequestBody CreateUserJSONBody
+
+// UpdateUserJSONRequestBody defines body for UpdateUser for application/json ContentType.
+type UpdateUserJSONRequestBody UpdateUserJSONBody
+
